--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,27 @@ DB_DATABASE=apik_dev
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_CONNECTION_BRI=mysql
+DB_HOST_BRI=
+DB_PORT_BRI=
+DB_DATABASE_BRI=eaps_bri
+DB_USERNAME_BRI=
+DB_PASSWORD_BRI=
+
+DB_CONNECTION_BNI=mysql
+DB_HOST_BNI=
+DB_PORT_BNI=
+DB_DATABASE_BNI=payment_bni
+DB_USERNAME_BNI=
+DB_PASSWORD_BNI=
+
+DB_CONNECTION_MANDIRI=mysql
+DB_HOST_MANDIRI=
+DB_PORT_MANDIRI=
+DB_DATABASE_MANDIRI=payment_mandiri
+DB_USERNAME_MANDIRI=
+DB_PASSWORD_MANDIRI=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
