--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,13 @@ DB_DATABASE_MANDIRI=payment_mandiri
 DB_USERNAME_MANDIRI=
 DB_PASSWORD_MANDIRI=
 
+DB_CONNECTION_LOT_LELANG=mysql
+DB_HOST_LOT_LELANG=
+DB_PORT_LOT_LELANG=
+DB_DATABASE_LOT_LELANG=lot_lelang
+DB_USERNAME_LOT_LELANG=
+DB_PASSWORD_LOT_LELANG=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
